test/corpus/namespace.txt
===========
Simple Declaration
===========

namespace Hello;

------------

(source_file
    (namespace_declaration
        ident: (identifier)))


===============================================
Single Character 
===============================================

namespace I;

-----------------------

(source_file
    (namespace_declaration
        ident: (identifier)))

=================================================
Namespace Declaration: _ prefix
=================================================

namespace _Hello;

-------------------------------------------------


(source_file 
    (namespace_declaration
        ident: (identifier)))


==================================================
Dotted Namespaces
==================================================

namespace Hello.Myname;

-------------------------------
(source_file 
    (namespace_declaration
        ident: (identifier)
        ident: (identifier)))

==================================================
Chained Dotted Namespaces
==================================================

namespace Animal.Vertebrates.Warm_Blooded.Mammals.Pigs;

-------------------------------
(source_file 
    (namespace_declaration
        ident: (identifier)
        ident: (identifier)
        ident: (identifier)
        ident: (identifier)
        ident: (identifier)))


==================================================
Single Character Dotted
==================================================

namespace H.O.A;

--------------------------------------------------
(source_file 
    (namespace_declaration
        ident: (identifier)
        ident: (identifier)
        ident: (identifier)))

=================================
Error: Typo
:error
=================================
namesapce Hello;
---------------------------------

=================================
Error: Start with number
:error
=================================

namespace 42AnswertoLife;

-------------------------
===============
Error: Missing Identifier
:error
===============

namespace ;

-------------
==========================
Error: Mising Semi-colon
:error
==========================

namespace Hello

--------------------
